--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="dasar-pemrograman-web/index.html">Kelas Belajar Dasar Pemrograman Web</a></li>
             <li><a href="landing-page-dicoding/index.html">Landing Page Dicoding</a></li>
-            <li><a href="tugas-akhir-membuat-website/index.html">Tugas Akhir Kelas Dasar Pemrograman Web</a></li>
+            <li><a href="../index.html">Tugas Akhir Kelas Dasar Pemrograman Web</a></li>
         </ul>
     </main>
 </body>
