--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -213,10 +213,24 @@
                     </section>
                     <section class="profile-social-links">
                         <a href="https://github.com/rfsyhb" target="_blank" class="fab fa-github"></a>
-                        <a href="https://id.linkedin.com/in/rafi-syihab-9020a51a0" target="_blank" class="fab fa-linkedin-in"></a>
+                        <a href="https://id.linkedin.com/in/rafi-syihab-9020a51a0" target="_blank"
+                            class="fab fa-linkedin-in"></a>
                         <a href="https://www.facebook.com/OzRafi/" target="_blank" class="fab fa-facebook"></a>
                         <a href="https://www.instagram.com/ozrafi/" target="_blank" class="fab fa-instagram"></a>
                     </section>
+                </div>
+                <div class="journey card" id="journey">
+                    <div class="journey-title">
+                        <h3>Learning Journey</h3>
+                    </div>
+                    <div class="journey-link">
+                        <ul>
+                            <li><a href="mogalaku/index.html">mogalaku</a></li>
+                            <li><a href="color-flipper/index.html">color flipping</a></li>
+                            <li><a href="coba-coba/index.html">coba-coba</a></li>
+                            <li><a href="dicoding/index.html">dicoding learning</a></li>
+                        </ul>
+                    </div>
                 </div>
             </aside>
         </div>
