--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -7,7 +7,7 @@
     <title>Tugas Akhir</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="assets/css/app-main.css">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,29 +39,33 @@
         </nav>
     </header>
 
-    <section class="hero" id="home">
-        <div class="hero-container">
-            <div class="hero-description">
-                <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
-                <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang Inovatif dan
-                    <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis dan
-                    intuitif. Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk mengasah
-                    kemampuan dengan menerapkan teknik <em>one commit everyday</em>.
-                </p>
-
-                <!-- Pergi ke github pages -->
-                <button id="portoButton" type="button">Learning Journey</button>
-            </div>
-
-            <div class="hero-image">
-                <img src="assets/img/logo-rafi.png" alt="logo character">
-            </div>
-        </div>
-    </section>
-
     <main>
         <div class="container">
             <div class="content">
+
+                <section class="hero" id="home">
+                    <div class="hero-container">
+                        <div class="hero-description">
+                            <h1 class="title">Rafi Syihab | React & Back-End Developer</h1>
+                            <p><em>Full-stack web developer</em> dengan Passion untuk Menciptakan Aplikasi Web yang
+                                Inovatif dan
+                                <em>User-Friendly</em>. Saya mengkhususkan diri dalam mengembangkan solusi yang dinamis
+                                dan
+                                intuitif. Ketika tidak sedang mengejar <em>deadline</em>, saya memanfaatkan waktu untuk
+                                mengasah
+                                kemampuan dengan menerapkan teknik <em>one commit everyday</em>.
+                            </p>
+
+                            <!-- Pergi ke github pages -->
+                            <button id="portoButton" type="button">Learning Journey</button>
+                        </div>
+
+                        <div class="hero-image">
+                            <img src="assets/img/logo-rafi.png" alt="logo character">
+                        </div>
+                    </div>
+                </section>
+
                 <article class="portofolio" id="portofolio">
                     <h2>Latest Project</h2>
                     <div class="porto-list">
@@ -218,19 +222,6 @@
                         <a href="https://www.facebook.com/OzRafi/" target="_blank" class="fab fa-facebook"></a>
                         <a href="https://www.instagram.com/ozrafi/" target="_blank" class="fab fa-instagram"></a>
                     </section>
-                </div>
-                <div class="journey card" id="journey">
-                    <div class="journey-title">
-                        <h3>Learning Journey</h3>
-                    </div>
-                    <div class="journey-link">
-                        <ul>
-                            <li><a href="mogalaku/index.html">mogalaku</a></li>
-                            <li><a href="color-flipper/index.html">color flipping</a></li>
-                            <li><a href="coba-coba/index.html">coba-coba</a></li>
-                            <li><a href="dicoding/index.html">dicoding learning</a></li>
-                        </ul>
-                    </div>
                 </div>
             </aside>
         </div>
