--- a/dicoding/tugas-akhir-membuat-website/index.html
+++ b/dicoding/tugas-akhir-membuat-website/index.html
@@ -57,7 +57,7 @@
                             </p>
 
                             <!-- Pergi ke github pages -->
-                            <button id="portoButton" type="button">Learning Journey</button>
+                            <button id="githubButton" type="button">Learning Journey</button>
                         </div>
 
                         <div class="hero-image">
