--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </footer>
 
     <!-- load script ketika DOM dimuat -->
-    <script src="dicoding/tugas-akhir-membuat-website/assets/js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
