adding icon and update about section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas Akhir</title>
+    <title>Rafi Syihab</title>
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="dicoding/tugas-akhir-membuat-website/assets/css/app.css">
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Icon Website -->
+    <link rel="icon" href="dicoding/tugas-akhir-membuat-website/assets/img/gambar-rafi.png" type="icon">
 </head>
 
 <body>
@@ -67,7 +70,8 @@
                     <div class="porto-list">
                         <section class="project">
                             <div class="project-image">
-                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto1-coffeean.png" alt="CoffeeanCo">
+                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto1-coffeean.png"
+                                    alt="CoffeeanCo">
                             </div>
                             <div class="project-description">
                                 <p><em>Website</em> penjualan biji kopi dengan penerapan teknik <em>up selling.</em></p>
@@ -76,7 +80,8 @@
                         </section>
                         <section class="project">
                             <div class="project-image">
-                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto2-profilbandung.png" alt="Profil Bandung">
+                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto2-profilbandung.png"
+                                    alt="Profil Bandung">
                             </div>
                             <div class="project-description">
                                 <p><em>Website</em> profil dari kota Bandung</p>
@@ -86,7 +91,8 @@
                         </section>
                         <section class="project">
                             <div class="project-image">
-                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto3-landingpagedicoding.png" alt="Landing Page Dicoding">
+                                <img src="dicoding/tugas-akhir-membuat-website/assets/img/porto3-landingpagedicoding.png"
+                                    alt="Landing Page Dicoding">
                             </div>
                             <div class="project-description">
                                 <p><em>Website landing page</em> Dicoding Indonesia.</p>
@@ -199,7 +205,8 @@
                 <div class="profile card">
                     <header>
                         <figure>
-                            <img src="dicoding/tugas-akhir-membuat-website/assets/img/gambar-rafi.png" alt="Rafi Syihab">
+                            <img src="dicoding/tugas-akhir-membuat-website/assets/img/gambar-rafi.png"
+                                alt="Rafi Syihab">
                             <figcaption>
                                 <h3>Rafi Syihab</h3>
                                 <p>Web Developer</p>
