DOM: menyiapkan konten

--- a/dicoding/membuat-front-end-web-pemula/lat-1/index.html
+++ b/dicoding/membuat-front-end-web-pemula/lat-1/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- jika script di taruh di atas maka setelah menekan ok baru web akan ter-load -->
+    <!-- <script src="app.js"></script> -->
 </head>
+
 <body>
+    <!-- jika script di taruh di atas maka setelah menekan ok baru web akan ter-load -->
+    <!-- <script src="app.js"></script> -->
+
     <h2 id="pesan">Selamat Datang</h2>
-    
     <script src="app.js"></script>
 </body>
+
 </html>
