--- a/dicoding/membuat-front-end-web-pemula/todoapps/index.html
+++ b/dicoding/membuat-front-end-web-pemula/todoapps/index.html
@@ -30,10 +30,18 @@
             </form>
         </div>
 
+        <!-- uncompleted todo -->
         <div class="container">
             <h2 class="container-header">Yang harus dilakukan</h2>
             <div class="list-item" id="todos">
-                
+
+            </div>
+        </div>
+
+        <!-- completed todo -->
+        <div class="container">
+            <h2 class="container-header">Yang sudah dilakukan</h2>
+            <div class="list-item" id="completed-todos">
             </div>
         </div>
     </div>
