--- a/dicoding/membuat-front-end-web-pemula/todoapps-up/index.html
+++ b/dicoding/membuat-front-end-web-pemula/todoapps-up/index.html
@@ -18,6 +18,7 @@
         <h2 class="container-header text-center">
           Tambah yang harus dilakukan
         </h2>
+
         <form class="form" action="#" id="form">
           <div class="form-group form-title">
             <label for="title">Masukkan hal yang akan dilakukan</label>
@@ -34,6 +35,7 @@
             class="btn-submit"
           />
         </form>
+        
       </div>
 
       <!-- uncompleted todo -->
@@ -49,6 +51,6 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/learn.js"></script>
   </body>
 </html>
