--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
@@ -54,16 +54,17 @@
             <input id="inputBookIsComplete" type="checkbox" />
           </div>
           <button id="bookSubmit" type="submit">
-            Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+            <span>Input to Bookshelf</span>
           </button>
         </form>
       </section>
 
       <!-- ^bookshelf -->
       <section class="book_shelf_container card">
-        <!-- !container -->
+        <!-- !head -->
         <section class="book_shelf_container_head">
           <h2 class="book_shelf_container__title">Rak Buku</h2>
+          <!-- search -->
           <form id="searchBook">
             <label for="searchBookTitle">Cari buku</label>
             <input id="searchBookTitle" type="text" placeholder="nama" />
@@ -73,14 +74,40 @@
 
         <!-- !not completed -->
         <section class="book_shelf card">
-          <h2>Belum selesai dibaca (not completed)</h2>
-          <div id="incompleteBookshelfList" class="book_list"></div>
+          <h3>Belum selesai dibaca <span>(not completed)</span></h3>
+          <div id="incompleteBookshelfList" class="book_list">
+            <!-- ^article -->
+            <!-- <article class="book_item card">
+              <div class="book_data">
+                <h3>Book Title</h3>
+                <p>Penulis: John Doe</p>
+                <p>Tahun: 2002</p>
+              </div>
+                
+              <div class="action">
+                <button class="green">
+                  <i class="fas fa-check-square"></i>
+                </button>
+                <button class="red"><i class="fas fa-trash"></i></button>
+              </div> -->
+          </div>
         </section>
 
         <!-- !completed -->
         <section class="book_shelf card">
-          <h2>Selesai dibaca (completed)</h2>
-          <div id="completeBookshelfList" class="book_list"></div>
+          <h3>Selesai dibaca <span>(completed)</span></h3>
+          <div id="completeBookshelfList" class="book_list">
+            <!-- <article class="book_item">
+              <h3>Book Title</h3>
+              <p>Penulis: John Doe</p>
+              <p>Tahun: 2002</p>
+
+              <div class="action">
+                <button class="green"><i class="fas fa-undo"></i></button>
+                <button class="red"><i class="fas fa-trash"></i></button>
+              </div>
+            </article> -->
+          </div>
         </section>
       </section>
     </main>
