adding js bookshelf

--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
@@ -83,13 +83,14 @@
                 <p>Penulis: John Doe</p>
                 <p>Tahun: 2002</p>
               </div>
-                
+
               <div class="action">
                 <button class="green">
                   <i class="fas fa-check-square"></i>
                 </button>
                 <button class="red"><i class="fas fa-trash"></i></button>
-              </div> -->
+              </div>
+            </article> -->
           </div>
         </section>
 
