--- a/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
+++ b/dicoding/membuat-front-end-web-pemula/bookshelf-apps/index.html
@@ -77,7 +77,7 @@
           <h3>Belum selesai dibaca <span>(not completed)</span></h3>
           <div id="incompleteBookshelfList" class="book_list">
             <!-- ^article -->
-            <!-- <article class="book_item card">
+            <article class="book_item card">
               <div class="book_data">
                 <h3>Book Title</h3>
                 <p>Penulis: John Doe</p>
@@ -85,12 +85,13 @@
               </div>
 
               <div class="action">
-                <button class="green">
+                <button class="green" id="deleteButton">
                   <i class="fas fa-check-square"></i>
                 </button>
+                <div id="buttonDescription" style="display: none;">Hapus buku</div>
                 <button class="red"><i class="fas fa-trash"></i></button>
               </div>
-            </article> -->
+            </article>
           </div>
         </section>
 
